# CMakeTemplateProjects

./: README.md
ANVELTemplateProj/: CMakeLists.txt  main.cpp
EigenTemplateProj/: CMakeLists.txt  main.cpp
GTestTemplateProj/: CMakeLists.txt  Test_MyTest.cpp
ODETemplateProj/: CMakeLists.txt  main.cpp
OSGTemplateProj/: CMakeLists.txt  main.cpp
Open3DTemplateProj/: CMakeLists.txt  TestVisualizer.cpp  open3d_config.cmake
OpenMPTemplateProj/: CMakeLists.txt  main.cpp
OpencvTemplateProj/: CMakeLists.txt  main.cpp
PCLTemplateProj/: CMakeLists.txt  main.cpp
QtGUITemplateProj/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
demoproj/: CMakeLists.txt  CMakeSettings.json  config.h.in
demoproj/app1/: CMakeLists.txt  app1.cpp  app1.h
demoproj/cmake/: gtest_configure.cmake
demoproj/lib1/: CMakeLists.txt  lib1.cpp
demoproj/test1/: CMakeLists.txt  main.cpp
demoproj/test2/: CMakeLists.txt  main.cpp
